# basic-cli-repl

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  data.txt  docker-run.sh  run.sh  x86.Dockerfile
include/: app_animal_visitor.hpp  zoo.hpp
src/: main.cpp
test/: CMakeLists.txt  app_tests.cpp  gtest_main.cpp
